--- a/O4/Latex/Procedimento_Michelson.tex
+++ b/O4/Latex/Procedimento_Michelson.tex
@@ -10,7 +10,8 @@ Si parte da una configurazione base, per esempio l'interferometro con un ramo su
 (si veda la Figura \ref{fig:mik}). A questo punto sullo schermo è proiettata una figura di interferenza. Dopodiché si
 varia gradualmente un qualche parametro del materiale sotto esame, per esempio la pressione (nel caso dell'aria), la lunghezza o l'inclinazione (per il vetro) oppure la concentrazione (per una soluzione). % beh, la soluzione è dell'esperimento successivo...
 Questo serve per variare il cammino ottico del raggio che attraversa il materiale.
-In questo modo la figura di interferenza varia e le frange si muovono.
+In questo modo la figura di interferenza varia e le frange si muovono. Dal conteggio delle frange si riesce ad ottenere, mediante
+apposite formule, l'indice di rifrazione voluto.
 
 %La seguente relazione lega il numero $N$ di frange passate sullo schermo, alla differenza di cammino ottico $d$.
 
@@ -45,9 +46,15 @@ La procedura eseguita per ricavare l'indice di rifrazione dell'aria è la seguen
 
 Per misurare l'indice di rifrazione del vetro abbiamo adottato una strategia simile. Dobbiamo partire da una data figura di interferenza e variare il cammino ottico di uno dei due raggi, contando il numero di massimi di intensità, ovvero il numero delle frange.
 
-Ponendo un vetro tra il beam splitter e lo specchio fisso si ottiene un effetto analogo a guello del caso precedete. Infatti il raggio luminoso rifratto è costretto ad attraversare il vetro sia in ``andata'' che al ``ritorno'' e quindi subirà una variazione del suo cammino ottico.
+Ponendo un vetro tra il beam splitter e lo specchio fisso si tara lo strumento. Per variare poi il cammino ottico abbiamo
+inclinato il vetro; in questo modo la sezione che viene attraversata dal raggio è maggiore e varia il cammino ottico.
+Inoltre il raggio luminoso è costretto ad attraversare il vetro sia in ``andata'' che al ``ritorno''.
 
-La prima operazione neccessaria è quella di capire dove si trova lo zero di questo allineamento, ovvero quando i due raggi compiono lo stesso cammino ottico. Pertanto, dopo aver posizionato il vetro, si agisce sullo specchio mobile allontanandolo o avvicinandolo al beam spltte per allinearlo con lo specchio fisso. Si fa questo al fine di ottenere una semplice figura di interferenza, che come nel caso precedente è una frangia luminosa.
+Abbiamo iniziato allineando il vetro in modo che fosse perpendicolare al raggio. Si è posto il raggio su di un goniometro posto
+tragitto del raggio. Ruotando il goniometro è stato cercato l'angolo per cui la figura di diffrazione si fermasse e tornasse indietro.
+Questo è l'angolo per cui il vetro è perpendicolare al raggio ed il cammino ottico è minore.
+%Pertanto, dopo aver posizionato il vetro,
+%si agisce sullo specchio mobile allontanandolo o avvicinandolo al beam spltte per allinearlo con lo specchio fisso. Si fa questo al fine di ottenere una semplice figura di interferenza, che come nel caso precedente è una frangia luminosa.
 
 A questo punto si segna l'angolo di allineamento, che nel nostro caso ha il seguente valore:
 
@@ -55,7 +62,8 @@ A questo punto si segna l'angolo di allineamento, che nel nostro caso ha il segu
 	\theta_0 \,=\, 2.2 \pm 0.1
 \end{equation}
 %
-Ruotando lo specchio ad ampiezze sempre maggiori si varia il cammino ottico del raggio luminoso rifratto. In tal modo scorre sullo schermo un certo numero di frange, il quale varia non linarmente con l'aumentare dei gradi.
+Ruotando lo specchio ad ampiezze sempre maggiori si varia il cammino ottico del raggio luminoso rifratto.
+In tal modo scorre sullo schermo un certo numero di frange, il quale varia non linarmente con l'aumentare dei gradi.
 
 \subsection{Analisi Dati}
 
