--- a/O4/Latex/Procedimento_Michelson.tex
+++ b/O4/Latex/Procedimento_Michelson.tex
@@ -67,19 +67,22 @@ In tal modo scorre sullo schermo un certo numero di frange, il quale varia non l
 
 \subsection{Analisi Dati}
 
-\subsubsection{Indice di rifrazione dell'aria} %: quadro teorico}
-
-Per ricavare l'indice di rifrazione dell'aria abbiamo sfruttato la seguente legge:
+Per ricavare gli indici di rifrazione abbiamo sfruttato la seguente legge:
 
 \begin{equation}
 	N \,=\, \frac{d}{\lambda}
 \end{equation}
 %
-dove con $N$  si indica il numero di frange (massimi di intensità) contati, $d$ il cammino ottico e $\lambda$ la lunghezza d'onda del laser.
+dove con $N$ si indica il numero di frange (massimi di intensità) contati, $d$ la differenza di cammino
+ottico tra la configurazione base e quella raggiunta e $\lambda$ la lunghezza d'onda del laser.
 
-Ricordiamo che a condizione di pressione costante il cammino ottico percorso dai due raggi luminosi risulta essere lo stesso.
-Quindi lo scopo sarà quello di confrontare il numero di frange contate con la differenza di pressione rilevata. Infatti variando la pressione nella camera da vuoto si varia l'indice di rifrazione dell'aria.
-Questo provoca una variazione nel cammino ottico del raggio riflesso dallo specchio semitrasparente e quindi fenomeni di diffrazione.
+\subsubsection{Indice di rifrazione dell'aria} %: quadro teorico}
+
+% non è proprio vero...
+%Ricordiamo che a condizione di pressione costante il cammino ottico percorso dai due raggi luminosi risulta essere lo stesso.
+Lo scopo sarà quello di confrontare il numero di frange contate con la differenza di pressione rilevata.
+Infatti variando la pressione nella camera da vuoto si varia l'indice di rifrazione dell'aria.
+Questo provoca una variazione nel cammino ottico del raggio  e quindi fenomeni di interferenza.
 Tali fenomeni saranno sempre più accentuati man mano che l'indice di rifrazione dell'aria varia in funzione della pressione interna alla camera.
 Sapendo che il cammino ottico ($D$) è pari a due volte la lunghezza della camera da vuoto moltiplicata per l'indice di rifrazione del gas ivi contenuto, possiamo ottenere la seguente relazione:
 
