lo so che sono inutile pasa me lo ricorda ogni giorno

--- a/O5/Latex/Procedimento.tex
+++ b/O5/Latex/Procedimento.tex
@@ -1,27 +1,84 @@
 \section{Procedimento}
 
-\subsection{Preparazione}
+\subsection{Preparazione della soluzione}
 
 Partendo da 2ml di soluzione uno molare di $CuSO_4$ a nostra disposizione abbiamo creato 4 soluzioni con diversa concentrazione (0.5, 0.25, 0.125, 0.0625) grazie alla seguente formula:
-\begin{equation}\label{eq:proporzione}
-	C_2 \,\, = \,\, C_1 \frac{V_1}{V_2}
-\end{equation}
-
-Per creare la prima soluzione abbiamo diluito i 2 ml fino ad arrivare a 4 ml di soluzione. In seguito ne abbiamo prelevato 2 ml e depositati in un contenitore trasparente che è stato a suo volta assicurato alla base in polistirolo. Con i successivi 2 ml abbiamo creato 4 ml di soluzione 0.25 molare, dei quali abbiamo prelevato 2 ml per l'esperimento. E così via anche per le altre due concentrazioni.
-
-
-Infine ogni gruppo ha creato una soluzione con concentrazione molare tra 0.5 e 1. Il nostro gruppo aveva l'incarico di preparare la soluzione 0.75 molare.
-Seguendo l'equazione (\ref{eq:proporzione}) abbiamo creato una soluzione di $CuSO_4$ 0.75 molare.
 
 \begin{equation}
-	V_2 \,\, = \,\, V_1 \frac{C_1}{C_2} \,\, = \,\, 1.5 \si{\milli\litre} \,\, \frac{1 \,\, \si{\mole\per\litre}}{0.75 \,\, \si{\mole\per\litre}} \,\, = \,\, 2 \,\, \si{\milli\litre}
+	C_f \,\, = \,\, C_i \,\, \frac{V_i}{V_f}
+	\label{eq:proporzione}
 \end{equation}
+%
+dove $C_f$ è la concentrazione molare finale della soluzione, $C_i$ è la concentrazione molare iniziale della soluzione, $V_i$ è il volume iniziale della soluzione mentre $V_f$ è il volumr finale della soluzione.
 
-La soluzione ricavata è stata interamente versata nell'ultimo contenitore trasparente a nostra disposizione e il quale è stato infine riposto nella base di polistirolo
+In questa esperienza siamo partiti da una soluzione a concentrazione uno molare di $CuSO_4$ che mana mano abbiamo diluito per ottenerne nuove concentrazioni, inferiori all'uno molare naturalmente.
+Pertanto abbiamo seguito questo semplice procediemnto per ottenere la serie di concentrazioni elencate sopra:
 
-\subsection{Procedimento di misura}
+\begin{itemize}
+	\item{siamo partiti con un volume di $2\,\,\si{\milli\litre}$ di soluzione di $CuSO_4$ alla concentrazione uno molare;}
+	\item{abbiamo deciso di fare quattro diluizioni della sostanza iniziale. In particolare abbiamo dimezzato ogni volta la concentrazione precedente in modo da rendere la procedura operativa molto semplice;}
+	\item{infatti dalla soluzione di partenza abbiamo creato la prima diluizione aggiungendo $2\,\,\si{\milli\litre}$ di acqua distillata. Abbiamo dunque portato il volume finale della soluzione a $4\,\,\si{\milli\litre}$;}
+	\item{in questo modo abbiamo dimezzato la concentrazione di $CuSO_4$ iniziale;}
+	\item{successivamente abbiamo mescolato la soluzione in modo da renderla omogenea. Abbiamo poi prelevato $2\,\,\si{\milli\litre}$ di sostanza che è stata versata in uno dei contenitori trasparenti;}
+	\item{in seguito abbiamo ripetuto la procedura sopra descritta in modo da dimezzare ulteriormente la concentrazione di sostanza appena ottenuta. Si noti infatti che per le diluizioni successive la concentrazione di soluto non è più dell'uno molare, ma per la seconda diluizione è del 0.5, per la terza del 0.25 e così via;}
+	\item{quindi alla fine abbiamo ottenuto quttro contenitori trasparenti con al loro interno $2\,\,\si{\milli\litre}$ di sostanza alle varie concentrazioni elencate sopra (0.5, 0.25, 0.125, 0.0625);}
+\end{itemize}
 
-Per ogni contenitore trasparente abbiamo misurato l'intensità del raggio di luce che lo attraversava.
+Infine ogni gruppo ha creato una soluzione con concentrazione molare tra 1 e 0.5. Il nostro gruppo aveva l'incarico di preparare la soluzione 0.75 molare.
+Quindi seguendo l'equazione (\ref{eq:proporzione}) abbiamo creato la soluzione di $CuSO_4$ con concentrazione 0.75 molare. Facciamo notare che in questo caso siamo partiti con $1.5\,\,\si{\milli\litre}$ di soluzione uno molare. 
+
+\begin{equation*}
+	V_f \,\, = \,\, V_i \,\, \frac{C_i}{C_f} \,\, = \,\, 1.5 \si{\milli\litre} \,\, \frac{1 \,\, \si{\mole\per\litre}}{0.75 \,\, \si{\mole\per\litre}} \,\, = \,\, 2 \,\, \si{\milli\litre}
+\end{equation*}
+%
+In questo modo abbiao ricavato quale doveva essere il volume finale di sostanza affinchè la sua concentrazione molare fosse del 0.75. Quindi abbiamo dovuto semplicemente aggiungere $0.5\,\,\si{\milli\litre}$ di acqua distillata alla soluzione iniziale.
+La soluzione ricavata è stata interamente versata nell'ultimo contenitore trasparente a nostra disposizione che è stato infine riposto nella base di polistirolo.
+
+\subsection{Misura dell'intensità luminosa finale}
+
+Come prima operazione abbiamo misurato l'intensità iniziale del raggio laser ($I_0$) senza alcun ostacolo tra la sorgente e il misuratore di intensità. Abbiamo ottenuto il seguente valore:
+
+\begin{equation*}
+	I\ped{0\ped{1}} \,\,=\,\, 130.0 \pm 0.1 \,\,\, \si{\joule} \,\, ??
+\end{equation*}
+%
+Quindi abbiamo misurato per ogni concentrazione di $CuSO_4$ l'intensità luminosa finale ($I_f$) del raggio laser. Abbiamo eseguito questa misura non solo sulle quattro concentrazioni da noi fatte ma anche su quelle comuni a tutti i gruppi, ovvero quelle comprese tra 1 e 0.5 molare. I valori da noi ottenuti sono riportati nella tabela seguente, Tabella \ref{tab:dati}.
+Infine abbiamo misurato nuovamente il valore dell'intensità luminosa del raggio laser a vuoto. Abbiamo ottenuto un valore di:
+
+\begin{equation*}
+	I\ped{0\ped{2}} \,\,=\,\, 131.0 \pm 0.1 \,\,\, \si{\joule} \,\, ??
+\end{equation*}
+%
+abbiamo fatto questa seconda misura per accertarci che l'apparato durante tutte le misure fosse rimasto, nei limiti del possibile, stabile. Infatti se le due intensità luminose fossero state troppo diferenti tra di loro si sarebbe dovuta ripetere l'intera procedura di misura.
+
+\begin{table}[t!]
+    \centering
+    \begin{tabular}{c c }
+        \toprule
+         Concentrazione molare & Intensità luminosa $[\si{\joule}]$ \\
+        \midrule
+		$1$ 	& $7.4 \pm 0.1$ \\
+		$0.9$ 	& $9.6 \pm 0.1$ \\       
+        $0.8$ 	& $13.3 \pm 0.1$ \\
+        $0.75$ 	& $14.2 \pm 0.1$ \\
+        $0.7$ 	& $17.2 \pm 0.1$ \\
+        $0.65$ 	& $19.8 \pm 0.1$ \\
+        $0.6$ 	& $22.0 \pm 0.1$ \\
+        $0.5$ 	& $25.9 \pm 0.1$ \\
+        $0.25$ 	& $49.0 \pm 0.1$ \\
+        $0.125$ & $74.0 \pm 0.1$ \\
+        $0.0625$ & $91.0 \pm 0.1$ \\
+        \bottomrule
+    \end{tabular}
+    \caption{•}
+    \label{tab:dati}
+\end{table}
+%
+Inoltre abbiamo anche misurato l'intensità finale del raggio laser quando la soluzione era composta interamente da acqua distillata e abbiamo ottenuto il seguente valore:
+
+\begin{equation*}
+	I\ped{H_2O} \,\,=\,\, 114.0 \pm 0.1 \,\,\, \si{\joule}
+\end{equation*}
 
 \begin{figure}[hbtp]
         \centering
