--- a/O5/Latex/Introduzione.tex
+++ b/O5/Latex/Introduzione.tex
@@ -1,3 +1,6 @@
 \section{Introduzione}
 
-Lo scopo di questa relazione è quello di verificare la legge di Beer, ossia una legge che lega la concentrazione molare di una soluzione di acqua e di una determinata sostanza con l'intensità di luce di un raggio fatto passare nella soluzione. In una prima parte dell'esperienza verificheremo la relazione al variare della concertrazione di soluto, mentre nella seconda parte verificheremo la relazione al variare del cammino della luce nella soluzione (lunghezza del contenitore).
+Lo scopo di questa relazione è quello di verificare la legge di Lambert-Beer, ossia una relazione empirica che mette in relazione l'intensità di luce assorbita da un mezzo alla natura chimica, alla concentrazione ed allo spessore del mezzo attraversato.
+Nel nostro caso verificheremo la relazione al variare della concentrazione del soluto.
+
+%una legge che lega la concentrazione molare di una soluzione di acqua e di una determinata sostanza con l'intensità di luce di un raggio fatto passare nella soluzione. In una prima parte dell'esperienza verificheremo la relazione al variare della concertrazione di soluto, mentre nella seconda parte verificheremo la relazione al variare del cammino della luce nella soluzione (lunghezza del contenitore).
