--- a/O5/Latex/Analisi.tex
+++ b/O5/Latex/Analisi.tex
@@ -1,8 +1,17 @@
 \section{Analisi dati}
 
-In questo preciso luogo andrebbe scritta l'analisi dati con tante tabelline e grafici come questo e questo. ok... vado a dormire...
+Come anticipato nell'introduzione in ottica la legge di Lambert-Beer, conosciuta anche come legge di Beer-Lambert-Bouguer, è una relazione empirica che correla la quantità di luce assorbita da un mezzo alla natura chimica, alla concentrazione ed allo spessore del mezzo attraversato.
+Quando un fascio di luce (monocromatica) di intensità $I_0$ attraversa uno strato di spessore $l$ di un mezzo (una soluzione nel nostro caso), una parte di questa intensità viene assorbita dal mezzo stesso e una parte viene trasmessa con intensità residua $I_f$.
+In questa breve descrizione del processo abbiamo omesso di considerare che una parte della radiazione luminosa subisce anche effetti di riflessione a causa della pareti del contenitore.
+
+Quindi il rapporto tra le intensità della luce trasmessa ($I_f$) e incidente sul mezzo attraversato ($I_0$) è espresso dalla seguente relazione:
+
+\begin{equation}
+	I_f \,\,=\,\, I_0 \,\, e^{-kcL}
+\end{equation}
+
 
 \begin{figure}[hbtp]
         \centering
         \includegraphics[scale=0.4]{chem_dog.pdf}
-        \end{figure}
+\end{figure}
