--- a/O4/Latex/Procedimento_Diffrazione.tex
+++ b/O4/Latex/Procedimento_Diffrazione.tex
@@ -190,6 +190,7 @@ I risultati dell'analisi dati sono visibili in Tabella \ref{tab:ost} e sono comm
 
 \begin{table}[t!]
     \centering
+    \footnotesize
     \begin{tabular}{l | c c || l | c c || l | c c }
         \toprule
         Fessura & $d$ & $\sigma(d)$ & Filo & $d$ & $\sigma(d)$ & Foro & $d$ & $\sigma(d)$ \\
