--- a/O4/Latex/Procedimento_Michelson.tex
+++ b/O4/Latex/Procedimento_Michelson.tex
@@ -155,6 +155,8 @@ ad ottenere il seguente valore:
 \begin{figure}[t]
     \centering
         \includegraphics[width=\textwidth]{lol.pdf}
-        \caption{Indice di rifrazione del vetro in funzione dell'angolo.}
+        \caption{Indice di rifrazione del vetro in funzione dell'angolo, per le due serie di dati che abbiamo misurato.
+            Come si nota, i valori variano in maniera selvaggia, per cui abbiamo dovuto ricorrere alla media statistica per
+        ricavare un valore che fosse perlomeno plausibile.}
         \label{fig:enne_theta}
 \end{figure}
